# redhook

./: .travis.yml  COPYING  Cargo.toml  README.md  test.sh
examples/fakeroot/: Cargo.toml
examples/fakeroot/src/: lib.rs
examples/neverfree/: Cargo.toml
examples/neverfree/src/: lib.rs
examples/readlinkspy/: Cargo.toml
examples/readlinkspy/src/: lib.rs
src/: dyld_insert_libraries.rs  ld_preload.rs  lib.rs
