[package]
name = "redhook"
version = "1.0.0"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]
description = "Dynamic function call interposition / hooking (LD_PRELOAD) for Rust"
repository = "https://github.com/geofft/redhook"
readme = "README.md"
keywords = ["LD_PRELOAD", "interposition"]
license = "BSD-2-Clause"

[dependencies]
libc = "0.2"
